fixed image overflowing issue with product slideshow divs and changed all the pictures on the site to random shopping images for privacy reasons

--- a/app/static/css/homepage.css
+++ b/app/static/css/homepage.css
@@ -100,13 +100,19 @@
     color: var(--white);
 }
 
-.carousel-item img {
+.carousel-item .product_picture {
     height: 100%;
     width: 100%;
-    overflow-y: hidden;
-    /* object-fit: cover; */
+    object-fit: contain;
 }
 
+.slide_show_pictures_link_tag {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
 /* all screen width css ends here */
 
 /* desktop only css begins here */
